--- a/flix.toml
+++ b/flix.toml
@@ -11,14 +11,15 @@ authors     = ["Stephen Tetley <stephen.tetley@gmail.com>"]
 
 
 [mvn-dependencies]
-"org.apache.arrow:arrow-format" = "12.0.1"
-"org.apache.arrow:arrow-memory-core" = "12.0.1"
-"org.apache.arrow:arrow-memory-netty" = "12.0.1"
-"org.apache.arrow:arrow-vector" = "12.0.1"
-"com.google.flatbuffers:flatbuffers-java" = "2.0.3"
-"io.netty:netty-buffer" = "4.1.93.Final"
-"io.netty:netty-common" = "4.1.93.Final"
-"org.slf4j:slf4j-api" = "2.0.7"
-"org.slf4j:slf4j-simple" = "2.0.7"
+"org.apache.arrow:arrow-format"                 = "12.0.1"
+"org.apache.arrow:arrow-memory-core"            = "12.0.1"
+"org.apache.arrow:arrow-memory-netty"           = "12.0.1"
+"org.apache.arrow:arrow-vector"                 = "12.0.1"
+"com.google.flatbuffers:flatbuffers-java"       = "2.0.3"
+"commons-codec:commons-codec"                   = "1.15"
+"io.netty:netty-buffer"                         = "4.1.93.Final"
+"io.netty:netty-common"                         = "4.1.93.Final"
+"org.slf4j:slf4j-api"                           = "2.0.7"
+"org.slf4j:slf4j-simple"                        = "2.0.7"
 
 
