--- a/flix.toml
+++ b/flix.toml
@@ -7,19 +7,22 @@ license     = "Apache-2.0"
 authors     = ["Stephen Tetley <stephen.tetley@gmail.com>"]
 
 [dependencies]
-"github:stephentetley/interop-base"              = "0.6.0"
+"github:stephentetley/interop-base"              = "0.6.1"
 
 
 [mvn-dependencies]
-"org.apache.arrow:arrow-format"                 = "12.0.1"
-"org.apache.arrow:arrow-memory-core"            = "12.0.1"
-"org.apache.arrow:arrow-memory-netty"           = "12.0.1"
-"org.apache.arrow:arrow-vector"                 = "12.0.1"
-"com.google.flatbuffers:flatbuffers-java"       = "2.0.3"
-"commons-codec:commons-codec"                   = "1.15"
-"io.netty:netty-buffer"                         = "4.1.93.Final"
-"io.netty:netty-common"                         = "4.1.93.Final"
-"org.slf4j:slf4j-api"                           = "2.0.7"
-"org.slf4j:slf4j-simple"                        = "2.0.7"
-
-
+"org.apache.arrow:arrow-format"                             = "12.0.1"
+"org.apache.arrow:arrow-memory-core"                        = "12.0.1"
+"org.apache.arrow:arrow-memory-netty"                       = "12.0.1"
+"org.apache.arrow:arrow-vector"                             = "12.0.1"
+"com.google.flatbuffers:flatbuffers-java"                   = "2.0.3"
+"com.google.code.findbugs:jsr305"                           = "3.0.2"
+"commons-codec:commons-codec"                               = "1.15"
+"io.netty:netty-buffer"                                     = "4.1.93.Final"
+"io.netty:netty-common"                                     = "4.1.93.Final"
+"org.slf4j:slf4j-api"                                       = "2.0.7"
+"org.slf4j:slf4j-simple"                                    = "2.0.7"
+"com.fasterxml.jackson.core:jackson-core"                   = "2.15.1"
+"com.fasterxml.jackson.core:jackson-annotations"            = "2.15.1"
+"com.fasterxml.jackson.core:jackson-databind"               = "2.15.1"
+"com.fasterxml.jackson.datatype:jackson-datatype-jsr310"    = "2.15.1"
